# shai-hulud-detect

./: .gitignore  MANIFEST.in  pyproject.toml
shai_hulud_detector/: __init__.py  main.py
shai_hulud_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
